Fix Dark Mode styles

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -2,9 +2,6 @@
 @import url(https://fonts.googleapis.com/css?family=Space+Grotesk:regular,italic,700,700italic);
 
 :root {
-
-  --vp-c-brand-1: #3C3C43;
-
   --vp-c-brand: #ff7340;
   --vp-c-brand-light: #ff5719;
   --vp-c-brand-lighter: #ff7340;
@@ -14,6 +11,11 @@
 
   --vp-c-sponsor: #fd1d7c;
 
+  --homepage-contrast-color: #292c32;
+  --tooltip-bg: #292c32;
+  --tooltip-text: #FFF;
+  --proect-card-icon-bg: transparent;
+
   /* Typography */
   --vp-font-family-base: "Space Grotesk", "Inter var experimental", "Inter var",
     -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
@@ -22,6 +24,12 @@
   /* Code Snippet font */
   --vp-font-family-mono: "Space Mono", Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.dark {
+  --tooltip-bg: #FFF;
+  --tooltip-text: #292c32;
+  --proect-card-icon-bg: #FFF;
 }
 
 /* Custom Stlye */
@@ -72,4 +80,8 @@
   .project-container {
     flex-direction: column;
   }
+}
+
+.clip {
+  -webkit-text-fill-color: var(--vp-c-text-1) !important;
 }
